--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "axios": "^1.4.0",
+    "googleapis": "^126.0.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
