--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@uiball/loaders": "^1.3.0",
     "axios": "^1.4.0",
     "googleapis": "^126.0.0",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.67.0",
     "typescript": "5.1.6"
   }
 }
