--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.5",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "@uiball/loaders": "^1.3.0",
     "axios": "^1.4.0",
+    "framer-motion": "^10.16.4",
     "googleapis": "^126.0.0",
     "next": "13.4.13",
     "react": "18.2.0",
